# temporal-agent-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  RELEASING.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
examples/interactive_math_agent/: main.rs
examples/pipelined_math_agent/: main.rs
examples/simple_math_agent/: main.rs
examples/structured_output_agent/: main.rs
examples/tunable_memory_agent/: main.rs
src/: activities.rs  builder.rs  error.rs  lib.rs  llm.rs  memory.rs  prelude.rs  state.rs  tool.rs  workflow.rs
tests/: agent_workflow.rs  prelude_memory_exports.rs  prelude_pipeline_exports.rs
tests/common/: mod.rs
